--- a/HAPR/TOM/Mouse/Makefile
+++ b/HAPR/TOM/Mouse/Makefile
@@ -52,7 +52,7 @@ clean:
 # install software to board, remember to sync the file systems
 install:
 	@echo "Copying " $(EXECNAME) "to the MBED file system"
-	cp $(EXECNAME).bin /run/media/tc675/MBED &
+	cp $(EXECNAME).bin /run/media/rc833/MBED &
 	sync
 	@echo "Now press the reset button on all MBED file systems"
 
